--- a/bls_frontend/src/assets/css/colors.css
+++ b/bls_frontend/src/assets/css/colors.css
@@ -3,11 +3,28 @@
 }
 
 .ablehnung-color div div div div a {
-    background-color: rgba(255, 0, 0, 0.59); /* TODO: Pseudo klassen für button setzen */
+    background-color: rgba(255, 0, 0, 0.59);
+}
+
+.ablehnung-color div div div div a:hover {
+    background-color: rgba(255, 0, 0, 0.7);
+}
+
+.ablehnung-color div div div div a:focus {
+    background-color: rgba(255, 0, 0, 0.59);
+    box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.25) !important;
+}
+
+.ablehnung-color div div div div a:active {
+    background-color: rgba(255, 0, 0, 0.85) !important;
 }
 
 .ablehnung-color .card-footer {
     border-top: 1px solid rgba(255, 0, 0, 0.2);
+}
+
+.ablehnung-color div div div div div span {
+    background-color: rgba(255, 0, 0, 0.59);
 }
 
 .urteil-color {
@@ -18,6 +35,52 @@
     background-color: rgba(0, 136, 255, 0.59);
 }
 
+.urteil-color div div div div a:hover {
+    background-color: rgba(0, 136, 255, 0.7);
+}
+
+.urteil-color div div div div a:focus {
+    background-color: rgba(0, 136, 255, 0.59);
+    box-shadow: 0 0 0 3px rgba(0, 136, 255, 0.25) !important;
+}
+
+.urteil-color div div div div a:active {
+    background-color: rgba(0, 136, 255, 0.85) !important;
+}
+
 .urteil-color .card-footer {
     border-top: 1px solid rgba(0, 136, 255, 0.2);
+}
+
+.urteil-color div div div div div span {
+    background-color: rgba(0, 136, 255, 0.59);
+}
+
+.default-color {
+    border-color: rgba(42, 46, 49, 0.59);
+}
+
+.default-color div div div div a {
+    background-color: rgba(42, 46, 49, 0.59);
+}
+
+.default-color div div div div a:hover {
+    background-color: rgba(42, 46, 49, 0.7);
+}
+
+.default-color div div div div a:focus {
+    background-color: rgba(42, 46, 49, 0.59);
+    box-shadow: 0 0 0 3px rgba(42, 46, 49, 0.25) !important;
+}
+
+.default-color div div div div a:active {
+    background-color: rgba(42, 46, 49, 0.85) !important;
+}
+
+.default-color .card-footer {
+    border-top: 1px solid rgba(42, 46, 49, 0.2);
+}
+
+.default-color div div div div div span {
+    background-color: rgba(42, 46, 49, 0.59);
 }
