--- a/bls_backend/src/main/resources/templates/index.html
+++ b/bls_backend/src/main/resources/templates/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Hello!</h1>
-    <p><q th:utext="${message}"></q></p>
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>bls_frontend</title><link href="/css/app.4d3aea68.css" rel="preload" as="style"><link href="/css/chunk-vendors.af3221a8.css" rel="preload" as="style"><link href="/js/app.47d44844.js" rel="preload" as="script"><link href="/js/chunk-vendors.d22ef9de.js" rel="preload" as="script"><link href="/css/chunk-vendors.af3221a8.css" rel="stylesheet"><link href="/css/app.4d3aea68.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but bls_frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.d22ef9de.js"></script><script src="/js/app.47d44844.js"></script></body></html>
