--- a/bls_frontend/src/assets/css/colors.css
+++ b/bls_frontend/src/assets/css/colors.css
@@ -171,3 +171,15 @@
 .vorlage-color div div div div div span {
     background-color: rgba(220, 86, 58, 0.59);
 }
+
+.success-color {
+    background-color: #5cb85c;
+}
+
+.irrelevant-color {
+    background-color: #d1c0a8;
+}
+
+.unsuccessful-color {
+    background-color: #ed4337;
+}
